fixed broken css and html display

--- a/src/frontend/public/app/shared/components/top-navigation-bar/top-navigation-bar.scss
+++ b/src/frontend/public/app/shared/components/top-navigation-bar/top-navigation-bar.scss
@@ -12,7 +12,7 @@
         position: absolute;
     }
 
-    login {
+    user-login {
 
         right: 0;
         bottom: 0;
